--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,8 @@ body {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
+  background-color: white;
+  color: black;
 }
 
 .bg-dark-teal {
@@ -106,4 +108,9 @@ button {
 button:hover {
   transform: translateY(-2px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+
+::-webkit-scrollbar{
+  width: 5px;
 }
